# explanatory-equilibrium

./: .gitignore  CITATION.cff  LICENSE  QUICKSTART.md  README.md  pyproject.toml  requirements-lock.txt
scripts/: experiment1_incentive_sweep.sh  experiment2_audit_budget.sh  experiments_combined.sh  openai_full.sh  sanity_all_gemini.sh  sanity_all_openai.sh  sanity_check.sh
scripts/dev/: gemini_api_debug.py  smoke_fixes.py
src/ee_fin/: __init__.py  analysis.py  cli.py  config.py  environment.py  payoff.py  plots.py  rng.py  schemas.py  sender_base.py  sender_llm.py  sender_mock.py  simulation.py  verifier.py
tests/: test_ambiguous_effect.py  test_environment.py  test_json_parsing.py  test_payoff.py  test_verifier.py
